--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 id="brandName"
                 class="mt-2 font-display text-3xl font-semibold tracking-tight sm:mt-3 sm:text-4xl lg:text-5xl"
               >
-                midlifeonsol
+                midlifeonsol.com
               </h1>
             </div>
             <div class="w-full sm:w-auto">
@@ -133,7 +133,7 @@
               </div>
             </div>
           </div>
-
+/*
           <figure class="glass ring-soft rounded-3xl p-6 shadow-glass sm:p-8">
             <blockquote class="text-balance font-display text-xl italic leading-snug text-white/92 sm:text-2xl lg:text-3xl">
               <span class="text-sea-tan">“</span>
@@ -144,6 +144,7 @@
               <span id="asOfDate" class="text-xs text-white/45"></span>
             </figcaption>
           </figure>
+          */
         </div>
       </section>
 
@@ -710,4 +711,5 @@
     </script>
   </body>
 </html>
+
 
