--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
               </div>
             </div>
           </div>
-/*
-          <figure class="glass ring-soft rounded-3xl p-6 shadow-glass sm:p-8">
+
+          <!-- <figure class="glass ring-soft rounded-3xl p-6 shadow-glass sm:p-8">
             <blockquote class="text-balance font-display text-xl italic leading-snug text-white/92 sm:text-2xl lg:text-3xl">
               <span class="text-sea-tan">“</span>
               <span id="missionText"></span>
@@ -143,8 +143,8 @@
             <figcaption class="mt-5 flex items-center justify-end gap-4 text-sm text-white/60">
               <span id="asOfDate" class="text-xs text-white/45"></span>
             </figcaption>
-          </figure>
-          */
+          </figure> -->
+          
         </div>
       </section>
 
@@ -711,5 +711,6 @@
     </script>
   </body>
 </html>
+
 
 
